VANITYS10:Refactor product repository and entity classes; introduce RepositoryResourceNotFoundException and enhance product creation logic with category validation